--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -36,8 +36,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
-    - name: SSH connection to Actions
-      uses: P3TERX/debugger-action@master
+    - name: Setup Debug Session
+      uses: csexton/debugger-action@master
       
     - name: Initialization environment
       env:
