--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -14,7 +14,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/andyfanybo/openwrt_tr3000_114M
-  REPO_BRANCH: main
+  REPO_BRANCH: master
 
 on:
   workflow_dispatch:
