--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -104,11 +104,14 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        make -j$(($(nproc) + 1)) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+
+    - name: Set Release Tag
+      run: echo "tag_name=OpenWrt_${{ env.REPO_BRANCH }}_${{ env.FILE_DATE }}" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
@@ -143,9 +146,11 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         tag: ${{ env.tag_name }}
-        name: N1_Openwrt_${{ env.REPO_BRANCH }} | ${{ env.DATE }}
+        name: tr3000_Openwrt_${{ env.REPO_BRANCH }} | ${{ env.DATE }}
         allowUpdates: true
-        artifacts: "${{ env.FIRMWARE }}/*.*,${{ env.PACKAGED_OUTPUTPATH }}/*.*"
+        artifacts: |
+          ${{ env.FIRMWARE }}/*.*
+          ${{ env.PACKAGED_OUTPUTPATH }}/*.*
         token: ${{ secrets.RELEASES_TOKEN }}
         body: |
           tr3000 114M大分区固件｜openclash｜lucky|samba
