--- a/.github/workflows/build-openwrt-24.10.yml
+++ b/.github/workflows/build-openwrt-24.10.yml
@@ -14,7 +14,7 @@ env:
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: CUDY_TR3000_V1_114M_OP_2410
+  FIRMWARE_TAG: CUDY_TR3000_V1_114M_immortalwrt_HNAT_2410
   TZ: Asia/Shanghai
 
 jobs:
@@ -125,11 +125,11 @@ jobs:
         echo -e "preset-terminal-tools.sh"
         $GITHUB_WORKSPACE/scripts/preset-terminal-tools.sh
 
-    - name: SSH connection to Actions
-      uses: P3TERX/ssh2actions@v1.0.0
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }} 
+    #- name: SSH connection to Actions
+     # uses: P3TERX/ssh2actions@v1.0.0
+     # env:
+     #   TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+     #   TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }} 
 
     - name: Download DL Package
       run: |
