--- a/.github/workflows/build-openwrt-24.10.yml
+++ b/.github/workflows/build-openwrt-24.10.yml
@@ -6,15 +6,15 @@ on:
   #  - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/dailook/immortalwrt-24.10.git
+  REPO_BRANCH: immortalwrt-24.10
   CONFIG_FILE: OpenWrt-OPKG-TR3000.config
   DIY_P1_SH: OpenWrt-part1.sh
   DIY_P2_SH: OpenWrt-part2.sh
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: CUDY_TR3000_V1_112M_immortalwrt_2410
+  FIRMWARE_TAG: Q6000_immortalwrt_2410
   TZ: Asia/Shanghai
 
 jobs:
